data/derived/fa15/progs/unify/prog2955.ml.out
Characters 42-50:
  let rec digitsOfInt n = digitsOfIntHelper [n > 10];;
                                            ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
